src/objects/Task_Specifier__c.object
<CustomObject>
    <fields>
        <fullName>Assigned_To_Field__c</fullName>
        <label>Assigned To Field</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Due_Date_Time_Field__c</fullName>
        <label>Due Date/Time Field</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offset_Value__c</fullName>
        <label>Offset Value</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Operation__c</fullName>
        <label>Operation</label>
        <picklist>
            <picklistValues>
                <fullName>Add Hours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Substract Hours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subtract Days</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Task Specifier</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Task Specifiers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>